apps/base/nextcloud/user-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-route
  namespace: nextcloud
spec:
  parentRefs:
  - name: cilium-gateway
    sectionName: https
  hostnames:
  - "cloud.kowi.it"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nextcloud
      port: 80
